The first fully functional version. Can send banknotes p2p and request from the server.